# serializer version: 1
# name: TestEventsPredicatePushdownExecution.test_exec_aliased_events_timestamp_filter_with_session_join
  '''
  
  SELECT e.event AS event, e__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(e.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, e.event AS event 
    FROM events AS e 
    WHERE and(equals(e.team_id, 420), greaterOrEquals(e.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s)), less(e.timestamp, toDateTime64(%(hogql_val_3)s, 6, %(hogql_val_4)s))) 
    LIMIT 50) AS e LEFT JOIN (
    SELECT dateDiff(%(hogql_val_5)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_6)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_7)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_8)s, toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(%(hogql_val_9)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS e__session ON equals(e.__pd_expr_0, e__session.session_id_v7) 
  LIMIT 50
  '''
# ---
# name: TestEventsPredicatePushdownExecution.test_exec_timestamp_filter_with_session_join
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.event AS event 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s)), less(events.timestamp, toDateTime64(%(hogql_val_3)s, 6, %(hogql_val_4)s))) 
    LIMIT 50) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_5)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_6)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_7)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_8)s, toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(%(hogql_val_9)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
  LIMIT 50
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_bare_timestamp_with_select_alias_pushes_down
  '''
  
  SELECT events.event AS event, events.__pd_expr_0 AS timestamp, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toTimeZone(toTimeZone(events.timestamp, %(hogql_val_0)s), %(hogql_val_1)s) AS __pd_expr_0, toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_2)s)) AS __pd_expr_1, events.event AS event 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(toTimeZone(toTimeZone(events.timestamp, %(hogql_val_3)s), %(hogql_val_4)s), %(hogql_val_5)s), lessOrEquals(toTimeZone(toTimeZone(events.timestamp, %(hogql_val_6)s), %(hogql_val_7)s), today())) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_8)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_9)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_10)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_11)s, toIntervalDay(3))), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(today(), toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_1, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_with_alias_and_session_join
  '''
  
  SELECT e.event AS event, e__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(e.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, e.event AS event 
    FROM events AS e 
    WHERE and(equals(e.team_id, 420), greaterOrEquals(e.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
    LIMIT 50000) AS e LEFT JOIN (
    SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS e__session ON equals(e.__pd_expr_0, e__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_with_session_join_and_timestamp_filter
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.event AS event 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_join_no_pushdown
  '''
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_0)s, 6, %(hogql_val_1)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_events_without_where_no_pushdown
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE equals(raw_sessions.team_id, 420) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_3)s)), events__session.session_id_v7) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_multiple_poe_fields_with_session_join
  '''
  
  SELECT events.event AS event, events.person_id AS id, events.person_properties AS properties, events.__pd_expr_0 AS created_at, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toTimeZone(events.person_created_at, %(hogql_val_0)s) AS __pd_expr_0, toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_1)s)) AS __pd_expr_1, events.event AS event, events.person_id AS person_id, events.person_properties AS person_properties 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_2)s, 6, %(hogql_val_3)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_1, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_multiple_pushable_predicates
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.event AS event 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s)), equals(events.event, %(hogql_val_3)s)) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_0_explicit_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_1_inner_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events INNER JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_2_cross_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events CROSS JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_3_right_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events RIGHT JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_4_right_outer_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events RIGHT OUTER JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_5_full_outer_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events FULL OUTER JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_non_row_preserving_join_skips_pushdown_6_full_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM events FULL JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_0)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_created_at_with_session_join
  '''
  
  SELECT events.event AS event, events.__pd_expr_0 AS created_at, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toTimeZone(events.person_created_at, %(hogql_val_0)s) AS __pd_expr_0, toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_1)s)) AS __pd_expr_1, events.event AS event 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_2)s, 6, %(hogql_val_3)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_4)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_5)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_6)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_7)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_1, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_id_with_session_join
  '''
  
  SELECT events.person_id AS id, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.person_id AS person_id 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_poe_properties_with_session_join
  '''
  
  SELECT events.event AS event, events.person_properties AS properties, events__session.`$session_duration` AS `$session_duration` 
  FROM (
    SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.event AS event, events.person_properties AS person_properties 
    FROM events 
    WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_3)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_4)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_5)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_6)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_row_preserving_join_pushes_timestamp_down_0_left_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM (
    SELECT events.`$session_id` AS `$session_id`, events.uuid AS uuid 
    FROM events 
    WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_0)s, 6, %(hogql_val_1)s))) 
    LIMIT 50000) AS events LEFT JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_2)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_row_preserving_join_pushes_timestamp_down_1_left_outer_join
  '''
  
  SELECT sessions.session_id AS session_id, events.uuid AS uuid 
  FROM (
    SELECT events.`$session_id` AS `$session_id`, events.uuid AS uuid 
    FROM events 
    WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_0)s, 6, %(hogql_val_1)s))) 
    LIMIT 50000) AS events LEFT OUTER JOIN (
    SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_2)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS sessions ON equals(events.`$session_id`, sessions.session_id) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_session_duration_filter_declines
  '''
  
  SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
  FROM events LEFT JOIN (
    SELECT dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
    FROM raw_sessions 
    WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_3)s, toIntervalDay(3)))) 
    GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_4)s)), events__session.session_id_v7) 
  WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_5)s, 6, %(hogql_val_6)s)), greater(events__session.`$session_duration`, 0)) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_simple_events_with_person_join
  '''
  
  SELECT events.event AS event, events__person.id AS id 
  FROM (
    SELECT events.distinct_id AS distinct_id, events.event AS event, events.person_id AS person_id 
    FROM events 
    WHERE and(equals(events.team_id, 420), greater(events.timestamp, toDateTime64(%(hogql_val_0)s, 6, %(hogql_val_1)s))) 
    LIMIT 50000) AS events LEFT OUTER JOIN (
    SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
    FROM person_distinct_id_overrides 
    WHERE equals(person_distinct_id_overrides.team_id, 420) 
    GROUP BY person_distinct_id_overrides.distinct_id 
    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) 
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT person.id AS id 
    FROM person 
    WHERE equals(person.team_id, 420) 
    GROUP BY person.id 
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1)))) 
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  LIMIT 50000
  '''
# ---
# name: TestEventsPredicatePushdownTransform.test_subquery_with_pushdown
  '''
  
  SELECT event AS event, avg(`$session_duration`) AS `avg($session_duration)` 
  FROM (
    SELECT events.event AS event, events__session.`$session_duration` AS `$session_duration` 
    FROM (
      SELECT toUInt128(accurateCastOrNull(events.`$session_id`, %(hogql_val_0)s)) AS __pd_expr_0, events.event AS event 
      FROM events 
      WHERE and(equals(events.team_id, 420), greaterOrEquals(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s)), or(equals(events.event, %(hogql_val_3)s), equals(events.event, %(hogql_val_4)s))) 
      LIMIT 100) AS events LEFT JOIN (
      SELECT dateDiff(%(hogql_val_5)s, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_6)s)), max(toTimeZone(raw_sessions.max_timestamp, %(hogql_val_7)s))) AS `$session_duration`, raw_sessions.session_id_v7 AS session_id_v7 
      FROM raw_sessions 
      WHERE and(equals(raw_sessions.team_id, 420), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(%(hogql_val_8)s, toIntervalDay(3)))) 
      GROUP BY raw_sessions.session_id_v7) AS events__session ON equals(events.__pd_expr_0, events__session.session_id_v7) 
    LIMIT 100) 
  GROUP BY event 
  LIMIT 50000
  '''
# ---
